5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4410/executions/1596_2049.log
== TEST (2019-03-26 18:37:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros =float(input())
qtd_de_michael = 1/3 * qtd_litros
a = round(quantidade_de_michael, 3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = round(quantidade_de_michael, 3)
NameError: name 'quantidade_de_michael' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:37:35) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros =float(input())
qtd_de_michael = 1/3 * qtd_litros
a = round(quantidade_de_michael, 3)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = round(quantidade_de_michael, 3)
NameError: name 'quantidade_de_michael' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:37:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros =float(input())
qtd_de_michael = 1/3 * qtd_litros
a = round(quantidade_de_michael. 3)
print(a)
-- ERROR:
File "XXXX", line 7
    a = round(quantidade_de_michael. 3)
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:38:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros =float(input())
qtd_de_michael = 1/3 * qtd_litros
a = round(quantidade_de_michael.  3)
print(a)
-- ERROR:
File "XXXX", line 7
    a = round(quantidade_de_michael.  3)
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:38:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros =float(input())
qtd_de_michael = 1/3 * qtd_litros
a = round(qtd_de_michael.  3)
print(a)
-- ERROR:
File "XXXX", line 7
    a = round(qtd_de_michael.  3)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:39:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros =float(input())
qtd_de_michael = 1/3 * qtd_litros
a = round(qtd_de_michael,3)
print(a)
-- OUTPUT:
2.667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:39:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

qtd_litros =float(input())
qtd_de_michael = 1/3 * qtd_litros
a = round(qtd_de_michael,3)
print(a)
-- EXECUTION TIME:
0.234797
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
2.667
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
4.667
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
115.667
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
